Performed static code analysis. Replaced new boxed primitives with cached values.